Update publication links for ICRA 2025

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -19,9 +19,8 @@ author_profile: true
       </p>
       <p style="color: #7f8c8d;">
         IEEE International Conference on Robotics and Automation (<strong>ICRA</strong>), 2025<br>
-        <a href="https://arxiv.org/pdf/2502.02663" style="color: #3498db; text-decoration: none;">[Paper]</a> | 
-        <a href="https://leumasnij.github.io/double_guessing/" style="color: #3498db; text-decoration: none;">[Website]</a> | 
-        <a href="https://youtu.be/ZNsIUE29w_c" style="color: #3498db; text-decoration: none;">[Video]</a>
+        <a href="https://arxiv.org/pdf/2503.03234" style="color: #3498db; text-decoration: none;">[Paper]</a> | 
+        <a href="https://dakaraisc.github.io/sphri_gesture_rec/" style="color: #3498db; text-decoration: none;">[Website]</a> 
       </p>
     </div>
   </div>
