Add publication entry for GelSight sensors

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -26,7 +26,21 @@ author_profile: true
   </div>
 </div>
 
-
+<div style="background-color: #f8f9fa; padding: 20px; border-radius: 10px; margin-bottom: 30px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+  <div style="display: flex; align-items: flex-start;">
+    <img align="left" style="width:200px; height:140px; margin-right:30px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);" src="/images/active_t.png">
+    <div>
+      <h3 style="color: #2c3e50; margin-top: 0;">A modularized design approach for GelSight family of vision-based tactile sensors</h3>
+      <p style="color: #34495e; margin-bottom: 10px;">
+         <a href="https://scholar.google.com/citations?user=H8FOdHwAAAAJ&hl=en" style="color: #3498db; text-decoration: none;">Arpit Agarwal</a> *, <a href="https://www.aminmirzaee.com/" style="color: #3498db; text-decoration: none;">Mohammad Amin Mirzaee</a> *, <strong>Xiping Sun</strong>, and <a href="https://siebelschool.illinois.edu/about/people/all-faculty/yuanwz" style="color: #3498db; text-decoration: none;">Wenzhen Yuan</a>
+      </p>
+      <p style="color: #7f8c8d;">
+        The International Journal of Robotics Research, 2025<br>
+        <a href="https://journals.sagepub.com/doi/abs/10.1177/02783649251339680?ai=1gvoi&mi=3ricys&af=R" style="color: #3498db; text-decoration: none;">[Paper]</a> 
+      </p>
+    </div>
+  </div>
+</div>
 
 
 
