--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -11,7 +11,7 @@ author_profile: true
 
 <div style="background-color: #f8f9fa; padding: 20px; border-radius: 10px; margin-bottom: 30px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
   <div style="display: flex; align-items: flex-start;">
-    <img align="left" style="width:200px; height:140px; margin-right:30px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);" src="/images/active_t.png">
+    <img align="left" style="width:200px; height:140px; margin-right:30px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);" src="/images/ICRA.png">
     <div>
       <h3 style="color: #2c3e50; margin-top: 0;">Social Gesture Recognition in spHRI: Leveraging Fabric-Based Tactile Sensing on Humanoid Robots</h3>
       <p style="color: #34495e; margin-bottom: 10px;">
@@ -28,7 +28,7 @@ author_profile: true
 
 <div style="background-color: #f8f9fa; padding: 20px; border-radius: 10px; margin-bottom: 30px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
   <div style="display: flex; align-items: flex-start;">
-    <img align="left" style="width:200px; height:140px; margin-right:30px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);" src="/images/active_t.png">
+    <img align="left" style="width:200px; height:140px; margin-right:30px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);" src="/images/IJRR.png">
     <div>
       <h3 style="color: #2c3e50; margin-top: 0;">A modularized design approach for GelSight family of vision-based tactile sensors</h3>
       <p style="color: #34495e; margin-bottom: 10px;">
